--- a/402.html
+++ b/402.html
@@ -37,7 +37,7 @@
 
         window.fbAsyncInit = function () {
             FB.init({
-                appId: '{536659170173247}',
+                appId: '536659170173247',
                 cookie: true,  // enable cookies to allow the server to access 
                 // the session
                 xfbml: true,  // parse social plugins on this page
