--- a/403.html
+++ b/403.html
@@ -15,16 +15,14 @@
             welcome.style.display = "none";
             main.style.display = "none";
             if (response.status === 'connected') { // 使用者已登入
-                // Logged into your app and Facebook.
-                testAPI(); //抓取使用者的資料
+
+                main.style.display = "block"; //抓取使用者的資料
             } else {       //使用者未登入，鼓勵使用者登入
-                // The person is not logged into your app or we are unable to tell.
-                document.getElementById('status').innerHTML = 'Please log ' +
-                    'into this app.';
+                welcome.style.display = "block";
+
             }
         }
 
-        // 2. 套件載入完成後，呼叫 window.fbAsyncInit 函式
         window.fbAsyncInit = function () {
             // 初始化 Facebook SDK 套件
             FB.init({
@@ -34,25 +32,23 @@
                 xfbml: true,  // parse social plugins on this page
                 version: 'v2.8' // use graph api version 2.8
             });
+            //偵測使用者的登入狀態
+            FB.getLoginStatus(function (response) {
+                console.log(response); //自我測試 連線及授權狀態
+                statusChangeCallback(response);
+            });
 
-            // 1. 載入 Facebook JAVASCRIPT SDK
-            // Load the SDK asynchronously
-            (function (d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) return;
-                js = d.createElement(s); js.id = id;
-                js.src = "https://connect.facebook.net/en_US/sdk.js";
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));
+        };
+        // 1. 載入 Facebook JAVASCRIPT SDK
+        // Load the SDK asynchronously
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
 
-            function testAPI() {
-                console.log('Welcome!  Fetching your information.... ');
-                FB.api('/me', function (response) {
-                    console.log('Successful login for: ' + response.name);
-                    document.getElementById('status').innerHTML =
-                        'Thanks for logging in, ' + response.name + '!';
-                });
-            }
 
     </script>
 </head>
