--- a/403.html
+++ b/403.html
@@ -15,14 +15,18 @@
             welcome.style.display = "none";
             main.style.display = "none";
             if (response.status === 'connected') { // 使用者已登入
-
                 main.style.display = "block"; //抓取使用者的資料
             } else {       //使用者未登入，鼓勵使用者登入
                 welcome.style.display = "block";
-
             }
         }
+        function checkLoginState() {
+            FB.getLoginStatus(function (response) {
+                statusChangeCallback(response);
+            });
+        }
 
+        // 2. 套件載入完成後，呼叫 window.fbAsyncInit 函式
         window.fbAsyncInit = function () {
             // 初始化 Facebook SDK 套件
             FB.init({
