--- a/401.html
+++ b/401.html
@@ -20,8 +20,8 @@
         }(document, 'script', 'facebook-jssdk'));</script>
 
     <h3>Website Title</h3>
-    <div class="fb-like" data-href="https://fanchiang.github.io/" data-width="960px" data-layout="standard" data-action="like"
-        data-size="small" data-show-faces="true" data-share="true"></div>
+    <div class="fb-like" data-href="https://fanchiang.github.io/JSad/" data-width="960px" data-layout="standard"
+        data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 </body>
 
 </html>
