--- a/401EX.html
+++ b/401EX.html
@@ -23,7 +23,7 @@
     </script>
 
     <h3>留言板</h3>
-    <div class="fb-comments" data-href="https://fanchiang.github.io/JSad/" data-width="760px" data-numposts="5"></div>
+    <div class="fb-comments" data-href="https://fanchiang.github.io/" data-width="760px" data-numposts="5"></div>
 </body>
 
 </html>
