--- a/404.html
+++ b/404.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Facebook Login</title>
     <script>
-
         //3.登入狀態改變時，做出對應的處理
         function statusChangeCallback(response) {
             let welcome = document.getElementById('welcome');
@@ -15,21 +14,19 @@
             welcome.style.display = "none";
             main.style.display = "none";
             if (response.status === 'connected') { // 使用者已登入
-
-                main.style.display = "block"; //抓取使用者的資料
-            } else {       //使用者未登入，鼓勵使用者登入
+                main.style.display = "block";
+            } else { //使用者未登入，鼓勵使用者登入
                 welcome.style.display = "block";
-
             }
         }
 
-        function checkLoginState() {
-            FB.getLoginStatus(function (response) {
-                statusChangeCallback(response);
-            });
-        }
+        // function checkLoginState() {
+        //     FB.getLoginStatus(function (response) {
+        //         statusChangeCallback(response);
+        //     });
+        // }
 
-
+        //自行建立配合 Login button 按下後，要去呼叫 statusChangeCallback();
         function login() {
             FB.login(function (response) {
                 statusChangeCallback(response);
@@ -41,9 +38,9 @@
             // 初始化 Facebook SDK 套件
             FB.init({
                 appId: '536659170173247',
-                cookie: true,  // enable cookies to allow the server to access 
+                cookie: true, // enable cookies to allow the server to access 
                 // the session
-                xfbml: true,  // parse social plugins on this page
+                xfbml: true, // parse social plugins on this page
                 version: 'v2.8' // use graph api version 2.8
             });
             //偵測使用者的登入狀態
@@ -58,12 +55,11 @@
         (function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
+            js = d.createElement(s);
+            js.id = id;
             js.src = "https://connect.facebook.net/en_US/sdk.js";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
-
-
     </script>
 </head>
 
