--- a/604.html
+++ b/604.html
@@ -86,7 +86,7 @@
     <div id="member" style="display: none;">
         <textarea id="content"></textarea>
         <button onclick="post();">Post</button>
-
+</div>
         <hr />
         <div id="list">Message List</div>
 </body>
