--- a/604.html
+++ b/604.html
@@ -55,7 +55,7 @@
         function post() {
             let id = currentUser.uid;
             let name = currentUser.displayName;
-            let content = document.querySelector("content");
+            let content = document.querySelector("#content").value;
             //加入資料庫
             let ref = db.ref("/message");
             ref.push({
