--- a/610.html
+++ b/610.html
@@ -95,7 +95,7 @@
                 } else { //登入狀態
                     if (currentUser.uid === message.id) { //登入者與留言作者是同一個人
                         list.innerHTML = message.name.bold() + " " + message.content +
-                            "<button onclick='del(\"" + mesaage.key + "\");'>Delete(</button>" +
+                            "<button onclick='del(\"" + message.key + "\");'>Delete(</button>" +
                             "<hr/>" + list.innerHTML;
                     } else {//不同一個人
                         list.innerHTML = message.name.bold() + " " + message.content + "<hr/>" + list.innerHTML;
